udev 128
========
Bugfixes.

The udevadm info --device-id-of-file= output has changed to use
the obvious format. Possible current users should use the --export
option which is not affected.

udev 127
========
Bugfixes.

Optical drive's media is no longer probed for raid signatures,
reading the end of the device causes some devices to malfunction.
Also the offset of the last session found is used now to probe
for the filesystem.

The volume_id library got a major version number update to 1,
some deprecated functions are removed.

A shared library "libudev" gets installed now to provide access
to udev device information. DeviceKit, the successor of HAL, will
need this library to access the udev database and search sysfs for
devices.
The library is currently in an experimental state, also the API is
expected to change, as long as the DeviceKit integration is not
finished.

udev 126
========
We use ./configure now. See INSTALL for details. Current
options are:
    --prefix=
        "/usr" - prefix for man pages, include files
    --exec-prefix=
        "" - the root filesystem, prefix for libs and binaries
    --sysconfdir=
        "/etc"
    --with-libdir-name=
        "lib" - directory name for libraries, not a path name
        multilib 64bit systems may use "lib64" instead of "lib"
    --enable-debug
        compile-in verbose debug messages
    --disable-logging
        disable all logging and compile-out all log strings
    --with-selinux
        link against SELInux libraries, to set the expected context
        for created files

In the default rules, the group "disk" gets permissions 0660 instead
of 0640. One small step closer to unify distro rules. Some day, all
distros hopefully end up with the same set of rules.

No symlinks to udevadm are installed anymore, if they are still needed,
they should be provided by the package.

udev 125
========
Bugfixes.

Default udev rules, which are not supposed to be edited by the user, should